Add remove friends functionality and update docs.
